--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Add this in pom.xml -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- DevTools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
