--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Application base URL (used in emails)
-app.base.url=http://localhost:8080
+app.base.url=https://leavemanagementsystem-kcww.onrender.com
