--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,13 +14,16 @@ spring.jpa.show-sql=true
 # ===============================
 # Email Configuration (Gmail SMTP)
 # ===============================
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
-
+# 📨 Brevo SMTP Settings (values fetched from Render environment)
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
+
 
 # Application base URL (used in emails)
 app.base.url=https://leavemanagementsystem-kcww.onrender.com
