Added local config and static files for localhost demo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,1 @@
-# ===============================
-# Database Configuration
-# ===============================
-spring.datasource.url=jdbc:postgresql://dpg-d44r4h3ipnbc73aq97m0-a.oregon-postgres.render.com:5432/leave_db_qzgq
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Hibernate (JPA)
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# ===============================
-# Email Configuration (Gmail SMTP)
-# ===============================
-# 📨 Brevo SMTP Settings (values fetched from Render environment)
-spring.mail.host=${SPRING_MAIL_HOST}
-spring.mail.port=${SPRING_MAIL_PORT}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.default-encoding=UTF-8
-
-
-
-# Application base URL (used in emails)
-app.base.url=https://leavemanagementsystem-kcww.onrender.com
+spring.profiles.active=local
